# stroke_api

./: API_tuto.ipynb  API_tuto_samy.ipynb  README.md  pandas.ipynb  pyproject.toml
data/: healthcare-dataset-stroke-data-clean.parquet
streamlit_app/: app.py  data.py  home.py
stroke_api/: API_tuto.ipynb  API_tuto_emese.ipynb  API_tuto_samy.ipynb  api.py  filters.py
