[tool.poetry]
name = "stroke-api"
version = "0.1.0"
description = ""
authors = ["emese007 <emese.hofi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
pandas = "^2.3.1"
streamlit = "^1.47.1"
ipykernel = "^6.30.1"
plotly-express = "^0.4.1"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
